MacViews: Fix VoiceOver failures

BrowserAccessibilityManagerMac::GetParentView is used to get the NSView
for a RenderWidgetHostViewMac (via a delegate interface -- it doesn't
know it's talking to a RenderWidgetHostViewMac).

It does this by calling AccessibilityGetAcceleratedWidget, and then
converting to an NSView via ui::AcceleratedWidgetMac::GetNSView.

Two problems with this approach:
 1. This is roundabout -- the RenderWidgetHostViewMac knows its NSView
    directly.
 2. When the RenderWidgetHostViewMac doesn't do its own compositing,
    this ends up being incorrect. The gfx::AcceleratedWidget used by
    compositing is the same as the main window. There exists no
    gfx::AcceleratedWidget mapped to the RenderWidgetHostViewCocoa.

Change BrowserAccessibilityManagerMac::GetParentView to call the
delegate method AccessibilityGetNativeViewAccessible, which returns an
NSView directly.

Remove the implementation of AccessibilityGetAcceleratedWidget, since it
will lead to trouble.

Bug: 852781
Change-Id: I74985d678f3cb10128a0e2caeb17fb3f22aa1752
Reviewed-on: https://chromium-review.googlesource.com/1105502
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Reviewed-by: Aaron Leventhal <aleventhal@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568960}
Former-commit-id: 19ca521bd06417000994f1a15c008c0b970eb526